--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -2,7 +2,6 @@
     margin: 0;
     font-family: 'Open Sans', sans-serif;
     font-family: 'Poppins', sans-serif;
-    background-color: rgb(32, 29, 23);
 }
 /* header and nav style */
 .nav-title{
@@ -12,6 +11,17 @@
 .text-primary{
     color: #fd6e0a;
 }
+.btn-primary{
+    height: 64px;
+    padding: 18px 35px;
+    background: #fd6e0a;
+    font-size: 20px;
+    font-weight: 700;
+    color: var(--White-Color, #FFF);
+    border-radius: 5px;
+    border: 0;
+}
+
 nav{
     display: flex; 
     justify-content: space-between;
@@ -23,4 +33,75 @@ nav li{
 }
 nav ul{
     display: flex;
+    align-items: center;
+}
+.header{
+    background: #FFF8F3;
+    background-image: url(../images/header_bg.png), url(../images/developer.png);
+    background-repeat: no-repeat;
+    background-position: bottom right, left;
+}
+/* banner style */
+.banner{
+    margin: 0 200px;
+    display: flex;
+    align-items: center;
+}
+
+.banner-sub-title{
+    color: var(--Dark-02, #474747);
+    font-size: 45px;
+    font-weight: 600;
+    margin-bottom: 5px;
+}
+.banner-title{
+    color: var(--Dark-01, #181818);
+    font-size: 85px;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+.banner-description{
+    color: var(--Dark-03, #757575);
+    font-size: 18px;
+    margin-bottom: 30px;
+}
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+/* about me section */
+.about{
+    margin-top: 130px;
+    border-radius: 10px;
+    background: #FFF8F3;
+    padding: 130px 156px;
+    text-align: center;
+}
+.section-title{
+    margin-bottom: 30px;
+    color: var(--Dark-01, #181818);
+    font-size: 35px;
+    font-weight: 700;
+}
+.section-description{
+    color: var(--Dark-03, #757575);
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px; /* 166.667% */
+    margin-bottom: 30px;
+
+}
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+}
+.about .info-title{
+    font-size: 20px;
+    color: var(--Dark-03, #757575);
+}
+
+.about .info-description{
+    color: var(--Dark-02, #474747);
+    font-size: 20px;
+    font-weight: 700;
 }
