--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -105,3 +105,55 @@ main{
     font-size: 20px;
     font-weight: 700;
 }
+
+/* what i do seciton */
+.what-i-do{
+    margin-top: 130px;
+    text-align: center;
+} 
+
+.wid-description{
+    text-align: center;
+
+}
+
+.skill-container{
+    margin-top: 50px;
+    display: flex;
+    gap: 24px;
+
+}
+.skill-title{
+    font-weight: 700;
+    font-size: 20px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+.skill-description{
+    font-size: 16px;
+    color: var(--Dark-03, #757575);
+}
+
+.skill{
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+    padding: 30px;
+}
+
+/* resume style */
+
+.resume{
+    margin-top: 130px;
+}
+.resume-title{
+    color: var(--Dark-02, #474747);
+    font-size: 30px;
+    font-weight: 700;
+}
+
+.resume-content-container{
+    margin-top: 113px;
+    display: flex;
+    justify-content: space-between;
+}
