--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -82,6 +82,7 @@ main{
     color: var(--Dark-01, #181818);
     font-size: 35px;
     font-weight: 700;
+    text-align: center;
 }
 .section-description{
     color: var(--Dark-03, #757575);
@@ -143,7 +144,7 @@ main{
 
 /* resume style */
 
-.resume{
+.resume-content{
     margin-top: 130px;
 }
 .resume-title{
@@ -152,8 +153,57 @@ main{
     font-weight: 700;
 }
 
-.resume-content-container{
+.resume-content{
     margin-top: 113px;
     display: flex;
-    justify-content: space-between;
+    gap: 24px;
+}
+.resume-item{
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+.resume-item .title{
+    color: var(--Dark-02, #474747);
+    font-size: 25px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+.resume-item .sub-title{
+    color: var(--Dark-03, #757575);
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+.resume-item .description{
+    color: var(--Dark-03, #757575);
+    font-size: 16px;
+}
+.resume-button{
+    margin-top: 50px;
+    text-align: center;
+}
+
+/* Contact Section */
+
+.contact{
+    padding: 130px 200px;
+    display: flex;
+    background: #FFF8F3;
+    gap: 100px;
+}
+
+.contact .section-title{
+    text-align: left;
+}
+.contact input[type="text"], input[type="email"], textarea{
+    margin-bottom: 24px;
+    width: 461px;
+    padding: 18px 30px;
+    
+}
+input{
+    height: 64px;
+}
+.contact{
+    text-decoration: none;
 }
